postgresDB-hibernate config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Configuring the Db
+spring.datasource.url: jdbc:postgresql://localhost:5432/movieCharactersDB
+spring.datasource.username: postgres
+spring.datasource.password: heihei
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+#Turn Statistics on
+logging.level.org.hibernate.stat=debug
+# Enable logging
+spring.jpa.show-sql=true
