--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.stat=debug
 # Enable logging
 spring.jpa.show-sql=true
+
+springdoc.swagger-ui.path=/api-docs/v1
+springdoc.swagger-ui.operationsSorter=method
