--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuring the Db
 spring.datasource.url: jdbc:postgresql://localhost:5432/movieCharactersDB
 spring.datasource.username: postgres
-spring.datasource.password: heihei
+spring.datasource.password: postgres
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
